Resolve z-index

--- a/css/home.css
+++ b/css/home.css
@@ -22,8 +22,6 @@
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  position: relative;
-  /* z-index: 9999999999999999999 !important; */
 }
 .nav-menu-all {
   display: flex;
